<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <DUT Name="ST_SwitchConfig" Id="{1b01e06e-3ad9-017e-0490-e818c7958e80}">
    <Declaration><![CDATA[TYPE ST_SwitchConfig :
STRUCT
	MagnetStartPosition				    	    : LREAL := 9850; // mm
	MagnetEndPosition				    	    : LREAL := 10600; // mm
	OnInnerLoopOffMagnetPosn					: LREAL	:= 170; //mm
	SwitchCurrentNominal						: LREAL := 5.8; // A (See function for computation)
	CurrentMultFactor							: LREAL := 1310; // Scaling factor for 10V output=25.0A
    UseNominalCurrentVeloSetpoints              : BOOL;
    UseNominalPositionCoeff			            : BOOL := TRUE;
 	DivertConfig	       						: ST_DivertConfig;
END_STRUCT
END_TYPE;]]></Declaration>
  </DUT>
</TcPlcObject>